--- a/fuelest/templates/fuelest/fuelquote.html
+++ b/fuelest/templates/fuelest/fuelquote.html
@@ -9,10 +9,13 @@
     $( ".datepicker" ).datepicker({
       changeMonth: true,
       changeYear: true,
-      // You can put more options here.
-
+    });
+    $("#id_gallons").change(function() {
+        
+        document.getElementById("total_field").value = (Math.ceil({{pr}} * $("#id_gallons").val() * 100) / 100).toFixed(2);
     });
   });
+  
 </script>
 <form method="post" >
 {% if form.errors %}
@@ -30,11 +33,11 @@
   {% endfor %}
 {% endif %}
 {% csrf_token %}
-{{form}}
-Address:<input type="text" name="addr" value="{{addr}}" style="width: 300px;" readonly>
-Price:<input type="text" name="pr" value="0.00" readonly>
-Total:<input type="text" name="tot" value="0.00" readonly>
-<button type="submit" class="btn btn-default">Submit</button>
+{{form.as_p}}
+<p>Address: <input type="text" name="addr" value="{{addr}}" style="width: 300px;" readonly></p>
+<p>Price: <input type="text" name="pr" value="{{pr}}" readonly></p>
+<p>Total: <input id="total_field" type="text" name="tot" value="0.00" readonly></p>
+<p><button type="submit" class="btn btn-default">Submit</button></p>
 
 <p><a href="/index">Home</a></p>
 {% endblock %}
