Added CSS to beautify app a bit.

--- a/fuelest/templates/fuelest/index.html
+++ b/fuelest/templates/fuelest/index.html
@@ -1,3 +1,5 @@
+{% extends "fuelest/base.html" %}
+
 {% block content %}
 <p>You have successfully logged in. Welcome, {{ user.username }}!</p>
 <ul>
