--- a/fuelest/templates/fuelest/quotesuccess.html
+++ b/fuelest/templates/fuelest/quotesuccess.html
@@ -1,4 +1,4 @@
+{% extends "fuelest/base.html" %}
 {% block content %}
 <p>Success! Quote submitted.</p>
-<p><a href="/index">Home</a></p>
 {% endblock %}
