--- a/fuelest/templates/fuelest/editprofile.html
+++ b/fuelest/templates/fuelest/editprofile.html
@@ -1,3 +1,5 @@
+{% extends "fuelest/base.html" %}
+
 {% block content %}
 <form method="post" >
 {% if form.errors %}
@@ -15,9 +17,8 @@
   {% endfor %}
 {% endif %}
 {% csrf_token %}
-{{profform}}
-{{addrform}}
+{{profform|linebreaks}}
+{{addrform|linebreaks}}
 
 <button type="submit" class="btn btn-default">Submit</button>
-<p><a href="/index">Home</a></p>
 {% endblock %}
