--- a/fuelest/templates/fuelest/fuelquote.html
+++ b/fuelest/templates/fuelest/fuelquote.html
@@ -1,3 +1,5 @@
+{% extends "fuelest/base.html" %}
+
 {% block content %}
 
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
@@ -11,11 +13,11 @@
       changeYear: true,
     });
     $("#id_gallons").change(function() {
-        
+
         document.getElementById("total_field").value = (Math.ceil({{pr}} * $("#id_gallons").val() * 100) / 100).toFixed(2);
     });
   });
-  
+
 </script>
 <form method="post" >
 {% if form.errors %}
@@ -38,6 +40,4 @@
 <p>Price: <input type="text" name="pr" value="{{pr}}" readonly></p>
 <p>Total: <input id="total_field" type="text" name="tot" value="0.00" readonly></p>
 <p><button type="submit" class="btn btn-default">Submit</button></p>
-
-<p><a href="/index">Home</a></p>
 {% endblock %}
