--- a/fuelest/templates/fuelest/login.html
+++ b/fuelest/templates/fuelest/login.html
@@ -1,10 +1,15 @@
+{% load static %}
+<head>
+  <link rel="stylesheet" type="text/css" href="{% static 'fuelest/main.css' %}">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+</head>
+<body>
 {% block content %}
-
-{% if form.errors %}
-<p class='errormsg'>Invalid username or password</p>
-{% endif %}
-
-<h2>Login</h2>
+<h1 class="title">Login</h1>
+<div class="content">
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
@@ -12,3 +17,5 @@
 </form>
 <p><a href="register">Register an account</a></p>
 {% endblock %}
+</div>
+</body>
