--- a/fuelest/templates/fuelest/profile.html
+++ b/fuelest/templates/fuelest/profile.html
@@ -1,3 +1,5 @@
+{% extends "fuelest/base.html" %}
+
 {% block content %}
 {% if profile_made %}
 <h1>Your profile</h1>
@@ -11,6 +13,4 @@
 {% else %}
 <p>Please <a href="edit">create a profile!</a></p>
 {% endif %}
-
-<p><a href="/index">Home</a></p>
 {% endblock %}
